docs/website/src/main/resources/certifications/jakarta-transactions/2.0/TCK-Results.md
TCK Results
===========

As required by the [Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php), the following is a summary of the TCK results for Glassfish 6.0 against Jakarta Transactions 2.0.

# Eclipse GlassFish 6.0, Full Profile, Certification Summary


- Organization Name ("Organization") and, if applicable, URL <br/>
  Eclipse Foundation
- Product Name, Version and download URL (if applicable) <br/>
  Eclipse Glassfish 6.0.0-SNAPSHOT-2020-10-04 https://download.eclipse.org/ee4j/glassfish/weekly/glassfish-6.0.0-SNAPSHOT-2020-10-04.zip
- Specification Name, Version and download URL <br/>
  Jakarta Transactions 2.0 https://jakarta.ee/specifications/transactions/2.0/ (after jakartaee/specifications#265 is merged and the site updated)
- TCK Version, digital SHA-256 fingerprint and download URL <br/>
  jakarta-transactions-tck-2.0.0, 1d37da3db272e8f1ba02058a63402fe55276724598e224f979e41a063e528a6d, https://download.eclipse.org/ee4j/jakartaee-tck/jakartaee9-eftl/promoted/jakarta-transactions-tck-2.0.0.zip
- Public URL of TCK Results Summary <br/>
  https://eclipse-ee4j.github.io/glassfish/certifications/jakarta-transactions/2.0/TCK-Results
- Any Additional Specification Certification Requirements <br/>
  N/A
- Java runtime used to run the implementation <br/>
```
java -version
java version "1.8.0_202"
Java(TM) SE Runtime Environment (build 1.8.0_202-b08)
Java HotSpot(TM) 64-Bit Server VM (build 25.202-b08, mixed mode)
```
- Summary of the information for the certification environment, operating system, cloud, ... <br/>
```
uname -a
Linux basic-wh2lq 3.10.0-1062.el7.x86_64 #1 SMP Thu Jul 18 20:25:13 UTC 2019 x86_64 GNU/Linux
cat /etc/os-release
NAME="Alpine Linux"
ID=alpine
VERSION_ID=3.12.0
PRETTY_NAME="Alpine Linux v3.12"
HOME_URL="https://alpinelinux.org/"
BUG_REPORT_URL="https://bugs.alpinelinux.org/"
```
- [x] By checking this box I acknowledge that the Organization I represent accepts the terms of the [EFTL](https://www.eclipse.org/legal/tck.php).
- [x] By checking this box I attest that all TCK requirements have been met, including any compatibility rules.

Test results:

```
[javatest.batch] Number of Tests Passed      = 72
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
```
